--- a/sec/methodology.tex
+++ b/sec/methodology.tex
@@ -5,13 +5,19 @@ Test cases must be executed, resulting in one-of-six possible outcomes. Then vot
 
 \subsection{Test Case Execution}
 
-\input{fig/test_process}
+\begin{figure}
+  \centering %
+  \includegraphics[width=.62\columnwidth]{img/test_process}%
+  \caption{%
+    Test case execution, and possible outcomes. Each test case produces one of 6 possible outcomes: \{bf,bc,bto,c,to,\cmark\}.%
+  }%
+\label{fig:test-process} %
+\end{figure}
+
 
 Figure~\ref{fig:test-process} shows the methodology for determining the outcomes of a single test case.
 
 In prior work we required that synthesized programs be well formed and compute \emph{useful work}. For the purpose of testing compilers, we discarded these requirements. Instead, we demand that the behavior of test cases is \emph{portable} and \emph{reproducible}. In some respects this simplifies the execution process. The possible outcomes for a test case are a build failure (\textbf{bf}), build crash (\textbf{bc}), runtime crash (\textbf{c}), or pass (\textbf{\cmark}). A \textbf{bf} occurs when compilation of a kernel fails, usually accompanied by an error message. A \textbf{bc} outcome occurs when the compiler crashes. In~\cite{Lidbury2015a}, the authors do not distinguish between compiler crashes and build failures. A \textbf{c} outcome occurs when the program crashes during execution. The \textbf{bto} and \textbf{to} outcomes occur when the program compilation or execution time out, respectively. As in previous work, we do not guarantee that generated programs time out, finding that XX\% of programs do not.
-
-Only 2.3\% of CLSmith wrong-code bugs are insensitive to optimization level.
 
 There are six possible outcomes of a test case execution:
 %
@@ -31,6 +37,8 @@ Voting is used to expose anomalous outcomes from configurations. In prior work, 
 
 A majority exists if there at least 6 configurations produce non-bc results with the same outcome, and of these $n$ non-bc configurations, at least $\ceil{n/2}$ configurations have the same outcome. Majority outcome $\mu$. For \cmark outcomes, the output of the program is used.
 
+Only 2.3\% of CLSmith programs with anomalous outputs are insensitive to optimization level.
+
 %
 \begin{enumerate}
 	\item \textbf{w} \emph{Wrong code} Program terminates gracefully, but computes a result which differs from the majority output. For a DeepSmith result to be classified with \emph{wrong-code}, we require first that the program passes verification using GPUVerify~\cite{Betts2012}, and that a reference run with Oclgrind~\cite{Price2015} produces no warnings. \cc{Vote on compiler warnings, and optimization sensitivity. This means we way miss bugs which optimization level insensitive, though our experiences testing with CLSmith revelead only discovered 2 such cases}.
@@ -39,23 +47,6 @@ A majority exists if there at least 6 configurations produce non-bc results with
 	\item \textbf{to} \emph{Runtime timeout} Program execution exceeds the timeout of 60 second, whereas the majority of configurations produce an output.
 \end{enumerate}
 
-
-%\begin{table}
-%	\scriptsize %
-%	\centering %
-%	\begin{tabular}{ c|ccc }
-%		\toprule
-%		 & \multicolumn{3}{c}{\textbf{Minority outcome}} \\
-%		 & \textbf{bf} & \textbf{c} & \textbf{\cmark} \\
-%		\midrule
-%		\textbf{bf} & \cmark & ? & ? \\
-%		\textbf{c} & c & \cmark & ? \\
-%		\textbf{\cmark} & bf & c & \cmark \\
-%		\bottomrule
-%	\end{tabular}
-%	\caption{Voting heuristics to determine the classification of results based on the majority outcome (rows) \cc{wtf is this\ldots}}
-%	\label{tab:voting-heuristics}
-%\end{table}
 
 \paragraph{Floating points} The OpenCL 1.2 specification permits acceptable error bounds (ULP) for floating point operations and builtin functions. Some operations like addition, subtraction, and multiplication are precise; divide permits a small error, and builtins vary widely. Thus two implementation may give different answers that both fit within the allowed ranges (and because errors propagate through operations it's hard to even describe the ULP on the final output). \texttt{half\_} functions permit large error bounds. \texttt{native\_} functions have ``implementation defined'' error bounds. TODO: Denormal numbers may optionally be pushed to zero.
 
