--- a/sec/motivation.tex
+++ b/sec/motivation.tex
@@ -4,10 +4,10 @@
 \newsavebox{\IntelSizetIntReduced}
 \begin{lrbox}{\IntelSizetIntReduced}
 \begin{lstlisting}
-__kernel void A(__global double* a) {
-  int tid = get_global_id(0);
-  if (tid < -1)
-    a[get_global_id(0)] = 1;
+__kernel void foo(__global double* a) {
+  int b = get_global_id(0);
+  if (b < -1)
+    a[b] = 1;
 }
 \end{lstlisting}
 \end{lrbox}
@@ -40,24 +40,26 @@ __kernel void A() {
 \end{lstlisting}
 \end{lrbox}
 
-
 \begin{figure}
   \centering %
-  \subfloat[Hand-reduced Figure~\ref{lst:intel-size_t-int}.]{%
+  \subfloat[This widely used pattern of integer comparison to thread ID is miscompiled on two compilers when optimizations are enabled, causing the \texttt{if} statement to be executed (hand-reduced version of Figure~\ref{lst:intel-size_t-int}).]{%
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\IntelSizetIntReduced}}}%
     \label{lst:intel-size_t-int-reduced}
   }\\%
-  \subfloat[Configs.\ $10\pm$ race condition when global size > 1 (fixed upstream). \cc{Though simple, this is code is difficult to produce using existing approaches - CLSmith does not allow thread index to affect program flow.}]{%
+  \subfloat[A race condition in \texttt{switch} statement evaluation causes this program to sporadically crash when executed with one compiler and global size $> 1$, irrespective of optimization level.]{%
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\OclgrindRaceSwitch}}}%
     \label{lst:oclgrind-race-switch}
   }\\%
-  \subfloat[Of the 10 compilers we tested, 6 crash with segfault when compiling this kernel. CLSmith does not generate erroneous code such as this.]{%
+  \subfloat[Of the 10 compilers we tested, 6 crash with segfault when compiling this malformed kernel. CLSmith does not generate erroneous code such as this.]{%
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\AlmostEverythingCrash}}}%
     \label{lst:almost-everything-crash}
   }\\%
-  \caption{Motivating bugs exposed using approach.}%
+  \caption{Motivating bugs exposed using our approach.}%
   \label{lst:motivation}%
 \end{figure}
+
+
+We motivate the case for compiler fuzzing through deep learning using three example of bugs found using DeepSmith which cannot be .
 
 An error in the optimizer of two of the compilers we tested
 % Configs.\ $4+$, $6+$
@@ -67,7 +69,7 @@ causes the \texttt{if} statement of Figure~\ref{lst:intel-size_t-int-reduced} to
 % >> 2144
 % ls | wc -l
 % >> 4655
-This is troubling --- 46\% of kernels on GitHub use this \texttt{if} construct to guard against invalid memory accesses. 
+This is troubling --- 46\% of kernels on GitHub use this ($tid \rightarrow$ int, \texttt{if}) pattern to guard against invalid memory accesses. 
 
 
 \cc{TODO} Figure~\ref{lst:oclgrind-race-switch}.
