--- a/lst/runtime-crash-bugs.tex
+++ b/lst/runtime-crash-bugs.tex
@@ -8,6 +8,6 @@
 		}%
 		\label{lst:pocl-undefined-symbols}
 	}\\%
-	\caption{Example kernels which expose runtime crash bugs.}%
+	\caption{Example kernels which cause runtime crashes.}%
 \label{lst:crash-bugs}%
 \end{figure}
