--- a/sec/conclusion.tex
+++ b/sec/conclusion.tex
@@ -4,4 +4,4 @@ We extend the state-of-the-art in a number of areas. First, we present a generat
 %
 our method achieves X-fold increase in production efficiency compared to syntactic generative models (if grammar based approach);
 %
-and we generate more human-like test cases for compilers than prior, in (some/most) cases eradicating the need for test case reduction.
+and we generate more human-like test-cases for compilers than prior, in (some/most) cases eradicating the need for test-case reduction.
