--- a/lst/compiler-crash-bugs.tex
+++ b/lst/compiler-crash-bugs.tex
@@ -1,64 +1,128 @@
-\lstset{language=[OpenCL]C}
+
+\newsavebox{\IntelVectorizerSegfault}
+\begin{lrbox}{\IntelVectorizerSegfault}
+  \hspace{1.5em}
+  \begin{lstlisting}
+    __kernel void A() {
+      while (true) {
+        barrier(1);
+      }
+    }
+  \end{lstlisting}
+\end{lrbox}
+
+
+\newsavebox{\OclgrindSemaAssertion}
+\begin{lrbox}{\OclgrindSemaAssertion}
+  \hspace{1.5em}
+  \begin{lstlisting}
+    __kernel void A(__global unsigned char* a, __global unsigned char* b) {
+      unsigned long c = get_global_id(0);
+      d[0] = (mad24(f, (int)(a[0], b[get_global_id(0)])) % (d * (d + 3)) + (c / 2))] * a[c + 1];
+    }
+  \end{lstlisting}
+\end{lrbox}
+
+\newsavebox{\NvidiaCompileSegfault}
+\begin{lrbox}{\NvidiaCompileSegfault}
+  \hspace{1.5em}
+  \begin{lstlisting}
+    __kernel void A(__global float* a, __local float* b, __local float* c, int d, int e) {
+      int f, g;
+      int h = get_local_id(0);
+      int i = get_local_id(1);
+      int j = get_global_id(0);
+      __global char* k = c + f * g + f;
+      if (f + 1 < h)
+        b[f * d + g * h + g] = g * f;
+    }
+  \end{lstlisting}
+\end{lrbox}
+
+\newsavebox{\NvidiaRecursionSegfault}
+\begin{lrbox}{\NvidiaRecursionSegfault}
+  \hspace{1.5em}
+  \begin{lstlisting}
+    __kernel void A(float4 a, __global float4* b, __global float4* c, unsigned int d, __global double* e, __global int2* f, __global int4* g, __constant int* h, __constant int* i) {
+      A(a, b, c, d, d, e, f, g, h);
+    }
+  \end{lstlisting}
+\end{lrbox}
+
+\newsavebox{\XeonPhiSegfault}
+\begin{lrbox}{\XeonPhiSegfault}
+  \hspace{1.5em}
+  \begin{lstlisting}
+    __kernel void A(void) {
+      __global int* a;
+      unsigned int* b;
+      b = a[0];
+      a[0] = b;
+      a[0] = b;
+      barrier(1);
+      if (get_global_id(0) == 0) {
+        *a = 0;
+      }
+      a[get_local_id(0)] = 0;
+    }
+  \end{lstlisting}
+\end{lrbox}
+
+\newsavebox{\IntelPtrAssertion}
+\begin{lrbox}{\IntelPtrAssertion}
+  \hspace{1.5em}
+  \begin{lstlisting}
+    __kernel void A(__global int* a, __global int* b) {
+      int c = (int)get_global_id(0);
+      a[c] += b;
+    }
+  \end{lstlisting}
+\end{lrbox}
+
+\newsavebox{\IntelScalarAssertion}
+\begin{lrbox}{\IntelScalarAssertion}
+  \hspace{1.5em}
+  \begin{lstlisting}
+    __kernel void A(__global float* a, __global float* b, __global float* c, __local float* d, unsigned int e, unsigned int f) {
+      for (unsigned int g = get_local_id(0) + get_local_size(0); g < get_local_size(0); g += get_local_size(0)) {
+        a[2 * get_local_id(0) + 1] = get_local_id(0);
+      }
+    }
+  \end{lstlisting}
+\end{lrbox}
+
 \begin{figure}
-	\centering %
-	\subfloat[Configs.\ $5\pm$ segementation fault in vectorizer pass.]{%
-		\noindent\mbox{\parbox{\columnwidth}{%
-				% bug-reports/coCLgenResults/segfaults/bug-report-intel-43729.c
-				\lstinputlisting{lst/bug5}%
-			}%
-		}%
-		\label{lst:intel-vectorizer-segfault}
-	}\\%
-	\subfloat[Configs.\ $10\pm$ compiler assertion during semantic analysis.]{%
-		\noindent\mbox{\parbox{\columnwidth}{%
-				% bug-reports/CLgenResults/bc/oclgrind-typos/bug-report-oclgrind-165430.c
-				\lstinputlisting{lst/bug7}%
-			}%
-		}%
-		\label{lst:oclgrind-sema-assertion}
-	}\\%
-	\subfloat[Configs.\ $1\pm$ segementation fault.]{%
-		\noindent\mbox{\parbox{\columnwidth}{%
-				% bug-reports/coCLgenResults/segfaults/bug-report-nvidia-21742.c
-				\lstinputlisting{lst/bug6}%
-			}%
-		}%
-		\label{lst:nvidia-compile-segfault}
-	}\\%
-	\subfloat[Configs.\ $1\pm$, $2\pm$ segementation fault.]{%
-		\noindent\mbox{\parbox{\columnwidth}{%
-				% bug-reports/CLgenResults/bc/segfaults/bug-report-nvidia-561489.c
-				\lstinputlisting{lst/bug11}%
-			}%
-		}%
-		\label{lst:nvidia-recursion-segfault}
-	}\\%
-	\subfloat[Configs.\ $7\pm$ segementation fault.]{%
-		\noindent\mbox{\parbox{\columnwidth}{%
-				% bug-reports/coCLgenResults/segfaults/bug-report-intel-69539.c
-				\lstinputlisting{lst/xeon-phi-segfault}%
-			}%
-		}%
-		\label{lst:nvidia-compile-segfault}
-	}\\%
-	\subfloat[Configs.\ $3\pm$ assertion during code generation for pointer assignment.]{%
-		\noindent\mbox{\parbox{\columnwidth}{%
-				% cl_launcherCLgenResults/runtime_crash/bug-report-intel-30870.sh
-				\lstinputlisting{lst/bug1}%
-			}%
-		}%
-		\label{lst:intel-llvm-assertion}
-	}\\%
-	\subfloat[Configs.\ $3\pm$ assertion in scalar type code generation.]{%
-		\noindent\mbox{\parbox{\columnwidth}{%
-				% bug-reports/CLgenResults/bc/scalar-type/bug-report-intel-534566.c
-				\lstinputlisting{lst/bug10}%
-			}%
-		}%
-		\label{lst:intel-scalartype-assertion}
-	}%
-	\caption{Example kernels which expose compiler crash bugs.}%
-	\label{lst:compiler-crash-bugs}%
+  \centering %
+  \subfloat[Configs.\ $5\pm$ crash during vectorizer pass.]{%
+    \noindent\mbox{\parbox{\columnwidth}{\usebox{\IntelVectorizerSegfault}}}%
+    \label{lst:intel-vectorizer-segfault}
+  }\\%
+  \subfloat[Configs.\ $10\pm$ compiler assertion during semantic analysis.]{%
+    \noindent\mbox{\parbox{\columnwidth}{\usebox{\OclgrindSemaAssertion}}}%
+    \label{lst:oclgrind-sema-assertion}
+  }\\%
+  \subfloat[Configs.\ $1\pm$ segementation fault.]{%
+    \noindent\mbox{\parbox{\columnwidth}{\usebox{\NvidiaCompileSegfault}}}%
+    \label{lst:nvidia-compile-segfault}
+  }\\%
+  \subfloat[Configs.\ $1\pm$, $2\pm$ segementation fault.]{%
+    \noindent\mbox{\parbox{\columnwidth}{\usebox{\NvidiaRecursionSegfault}}}%
+    \label{lst:nvidia-recursion-segfault}
+  }\\%
+  \subfloat[Configs.\ $7\pm$ segementation fault.]{%
+    \noindent\mbox{\parbox{\columnwidth}{\usebox{\XeonPhiSegfault}}}%
+    \label{lst:xeon-phi-segfault}
+  }\\%
+  \subfloat[Configs.\ $3\pm$ assertion during code generation for pointer assignment.]{%
+    \noindent\mbox{\parbox{\columnwidth}{\usebox{\IntelPtrAssertion}}}%
+    \label{lst:intel-ptr-assertion}
+  }\\%
+  \subfloat[Configs.\ $3\pm$ assertion in scalar type code generation.]{%
+    \noindent\mbox{\parbox{\columnwidth}{\usebox{\IntelScalarAssertion}}}%
+    \label{lst:intel-scalar-assertion}
+  }\\%
+  \caption{Example kernels which crash compilers.}%
+  \label{lst:compiler-crashes}%
 \end{figure}
 
 
