--- a/tab/cldrive-params.tex
+++ b/tab/cldrive-params.tex
@@ -3,6 +3,6 @@
 %  \centering %
 %  % \rowcolors{2}{white}{gray!25}
 %  \input{build/tab/cldrive-params}
-%  \caption{Test case parameters. *Dataset size is not used for the CLSmith driver.}
+%  \caption{Test-case parameters. *Dataset size is not used for the CLSmith driver.}
 %  \label{tab:cldrive-params}
 %\end{table}
